--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,16 @@ ai-hex = "ai_hexagon.cli:cli"
 [tool.poetry.dependencies]
 python = "^3.12"
 inflection = "^0.5.1"
-jax = { extras = ["cuda12"], version = "^0.4.34" }
+jax = "^0.4.34"
 flax = "^0.9.0"
 optax = "^0.2.3"
 pydantic = "^2.9.2"
 click = "^8.1.7"
 tabulate = "^0.9.0"
 
+
+[tool.poetry.group.cuda12.dependencies]
+jax = { extras = ["cuda12"], version = "^0.4.35" }
 
 [build-system]
 requires = ["poetry-core"]
