--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ click = "^8.1.7"
 tabulate = "^0.9.0"
 
 
+[tool.poetry.group.cuda12]
+optional = true
+
 [tool.poetry.group.cuda12.dependencies]
 jax = { extras = ["cuda12"], version = "^0.4.35" }
 
