--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,22 @@ optional = true
 [tool.poetry.group.cuda12.dependencies]
 jax = { extras = ["cuda12"], version = "^0.4.35" }
 
+
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.7.2"
+pre-commit = "^4.0.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 110
+indent-width = 4
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
