--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ optional = true
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.7.2"
 pre-commit = "^4.0.1"
+mypy = "^1.13.0"
 
 [build-system]
 requires = ["poetry-core"]
