--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,15 @@ ai-hex = "ai_hexagon.cli:cli"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-inflection = "^0.5.1"
 jax = "^0.4.34"
+einops = "^0.8.0"
 flax = "^0.9.0"
 optax = "^0.2.3"
 pydantic = "^2.9.2"
 click = "^8.1.7"
 tabulate = "^0.9.0"
 tqdm = "^4.67.0"
+inflection = "^0.5.1"
 
 [tool.poetry.group.cuda12]
 optional = true
