--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -32,6 +32,9 @@ jobs:
         defaults:
             run:
                 working-directory: ./frontend # Set default working directory for all run steps
+        env:
+            GITHUB_REPOSITORY: ${{ github.repository }}
+            GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
 
         steps:
             - name: Checkout
