--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,26 +1,22 @@
-# Sample workflow for building and deploying a Next.js site to GitHub Pages
-#
-# To get started with Next.js see: https://nextjs.org/docs/getting-started
-#
+# Workflow for building and deploying a Next.js site to GitHub Pages
 name: Deploy Next.js site to Pages
 
 on:
-    # Runs on pushes targeting the default branch
+    # Runs on pushes targeting the main branch and changes in the 'frontend' directory
     push:
         branches: ['main']
-        paths: ['frontend/**']
+        paths: ['frontend/**', 'results/**']
 
-    # Allows you to run this workflow manually from the Actions tab
+    # Allows manual triggering of the workflow
     workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Permissions required for deployment
 permissions:
     contents: read
     pages: write
     id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# Configure concurrency to prevent overlapping deployments
 concurrency:
     group: 'pages'
     cancel-in-progress: false
@@ -32,9 +28,11 @@ jobs:
         defaults:
             run:
                 working-directory: ./frontend # Set default working directory for all run steps
+
         steps:
-            - name: Checkout
+            - name: Checkout repository
               uses: actions/checkout@v4
+
             - name: Detect package manager
               id: detect-package-manager
               run: |
@@ -42,48 +40,48 @@ jobs:
                     echo "manager=yarn" >> $GITHUB_OUTPUT
                     echo "command=install" >> $GITHUB_OUTPUT
                     echo "runner=yarn" >> $GITHUB_OUTPUT
-                    exit 0
                   elif [ -f "package.json" ]; then
                     echo "manager=npm" >> $GITHUB_OUTPUT
                     echo "command=ci --force" >> $GITHUB_OUTPUT
                     echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-                    exit 0
                   else
                     echo "Unable to determine package manager"
                     exit 1
                   fi
-            - name: Setup Node
+
+            - name: Setup Node.js environment
               uses: actions/setup-node@v4
               with:
                   node-version: '20'
                   cache: ${{ steps.detect-package-manager.outputs.manager }}
-                  cache-dependency-path: './frontend/**/package-lock.json' # Updated cache path
-            - name: Setup Pages
+                  cache-dependency-path: '**/package-lock.json'
+
+            - name: Setup GitHub Pages
               uses: actions/configure-pages@v5
               with:
-                  # Automatically inject basePath in your Next.js configuration file and disable
-                  # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
-                  #
-                  # You may remove this line if you want to manage the configuration yourself.
                   static_site_generator: next
-            - name: Restore cache
+
+            - name: Restore Next.js cache
               uses: actions/cache@v4
               with:
-                  path: |
-                      .next/cache
-                  # Generate a new cache whenever packages or source files change.
-                  key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-                  # If source files changed but packages didn't, rebuild from a prior cache.
+                  path: .next/cache
+                  key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock', '**/package.json') }}-${{ hashFiles('**/*') }}
                   restore-keys: |
-                      ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+                      ${{ runner.os }}-nextjs-
+
             - name: Install dependencies
               run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-            - name: Build with Next.js
+
+            - name: Build the Next.js app
               run: ${{ steps.detect-package-manager.outputs.runner }} next build
-            - name: Upload artifact
+
+            - name: List contents of output directory
+              run: ls -la ./out
+
+            - name: Upload artifact to GitHub Pages
               uses: actions/upload-pages-artifact@v3
               with:
-                  path: ./frontend/out # Updated output path
+                  path: ./out
 
     # Deployment job
     deploy:
