--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -81,7 +81,7 @@ jobs:
             - name: Upload artifact to GitHub Pages
               uses: actions/upload-pages-artifact@v3
               with:
-                  path: ./out
+                  path: ./frontend/out
 
     # Deployment job
     deploy:
